# proyecto2_GestionFincaAgricola

./: .gitignore  README.md  package.yaml  proyecto2-GestionFincaAgricola.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/install/b1d38d4c/pkgdb/: package.cache
src/: Main.hs
src/Controllers/: Cosechas.hs  Herramientas.hs  Menu.hs  Parcelas.hs  Trabajadores.hs
src/Models/: Cosecha.hs  Herramienta.hs  Parcela.hs  Trabajador.hs
src/Utils/: FileIO.hs  Generadores.hs  Validaciones.hs
src/data/: Cosechas.csv  Herramientas.csv  Parcelas.csv
