cabal-version: 1.12

name:           proyecto2-GestionFincaAgricola
version:        0.1.0.0
author:         Duan Espinoza
maintainer:     75913012+Duan-Espinoza@users.noreply.github.com
license:        MIT
build-type:     Simple

library
  exposed-modules:
    Models.Trabajador
    Models.Herramienta
    Models.Parcela
    Models.Cosecha
    Controllers.Menu
    Controllers.Herramientas
    Controllers.Parcelas
    Controllers.Cosechas
    Controllers.Trabajadores
    Utils.FileIO
    Utils.Validaciones
    Utils.Generadores
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: 
    base >=4.7 && <5,
    directory,
    containers
  default-language: Haskell2010

executable proyecto2-GestionFincaAgricola
  main-is: Main.hs
  other-modules:
    Controllers.Herramientas
    Controllers.Menu
    Controllers.Trabajadores
    Models.Herramienta
    Paths_proyecto2_GestionFincaAgricola
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
    base,
    proyecto2-GestionFincaAgricola,
    directory,
    containers
  default-language: Haskell2010
